# claude-omnissiah

./: .gitignore  CLAUDE.md  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
rites/digitus-Dei/: README.md  pyproject.toml  tox.ini
rites/digitus-Dei/.claude-plugin/: plugin.json
rites/digitus-Dei/commands/: initialize.md  list-projects.md  new-project.md  project-status.md  resume-project.md  test.md  viberesume.md  vibesolve.md  vibestart.md
rites/digitus-Dei/hooks/: hooks.json
rites/digitus-Dei/scripts/: lock_project.py  project_utils.py  registry.py  selector.py  test_plugin.py  unlock_project.py
rites/digitus-Dei/tests/: conftest.py  test_cli.py  test_project_utils.py  test_registry.py  test_selector.py  test_session_hooks.py
tests/: validate-marketplace.sh
